--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div id="containerInfo">
-        <h1>Hello, I am running in a Dev Container id <%= id %>!</h1>
+        <h1>Hello, I am running in a Dev Container </h1>
        
     
     </div>
